# file-compass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PRESS_RELEASE.md  PROPOSED_README.md  README.md  README.md.bak  README_TEMPLATE.md  REPOSITORY_UPDATES.md  REPO_METADATA.md  SECURITY.md  WAVE_1_PROGRESS.md  WAVE_2_PROGRESS.md  llms.txt  pyproject.toml
.github/issue_bodies/: 001-p0-readme-positioning.md  002-p0-quickstart-navigation.md  003-p1-search-and-filtering.md  004-p1-large-repo-strategies.md  005-p2-performance-and-scaling.md
.github/workflows/: ci.yml  publish.yml
docs/media/: README.md
file_compass/: __init__.py  chunker.py  cli.py  config.py  embedder.py  explainer.py  gateway.py  indexer.py  merkle.py  quick_index.py  scanner.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_cli_scanner_batch1.py  test_config.py  test_embedder.py  test_explainer.py  test_gateway.py  test_gateway_explainer_batch3.py  test_indexer.py  test_indexer_quickindex_batch2.py  test_merkle.py  test_quick_index.py  test_scanner.py
tests/integration/: test_mcp_gateway.py
tests/performance/: test_benchmarks.py
tests/workflows/: test_end_to_end.py
