[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-compass"
version = "0.1.0"
description = "Semantic file search for AI workstations using HNSW indexing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = ["semantic-search", "hnsw", "embeddings", "file-search", "mcp", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/file-compass"
Repository = "https://github.com/mcp-tool-shop/file-compass"
Issues = "https://github.com/mcp-tool-shop/file-compass/issues"
Changelog = "https://github.com/mcp-tool-shop/file-compass/blob/main/CHANGELOG.md"

[project.scripts]
file-compass = "file_compass.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["file_compass"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
